--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,38 @@
+# Flutter/Dart
+.dart_tool/
+.idea/
+.vscode/
+/.packages
+/.flutter-plugins
+/.flutter-plugins-dependencies
+build/
+/.pub-cache/
+pubspec.lock
+
+# Generated files
+*.g.dart
+
+# Android
+/android/.gradle/
+**/local.properties
+
+# iOS
+Pods/
+Podfile.lock
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+# Firebase local cache
+.firebase/
+
+# macOS
+.DS_Store
 # Miscellaneous
 *.class
 *.log
