--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,19 +13,9 @@ dependencies:
   # State Management & Dependency Injection
   get: ^4.6.5
   
-  # ✅ WEB SUPPORT (DEBE IR PRIMERO - CRÍTICO para Firebase Web)
-  js: 0.6.7
-  
-  # ✅ FIREBASE CORE (todas las plataformas)
-  firebase_core: 2.27.0
-  
-  # ✅ FIREBASE WEB (CRÍTICO para Web - versión COMPATIBLE)
-  firebase_core_web: 2.27.0  # MISMA versión que firebase_core
-  
-  # ✅ FIREBASE AUTH
-  firebase_auth: 4.14.0
-  
-  # ✅ FIREBASE AUTH WEB (CRÍTICO para Web - versión QUE YA FUNCIONÓ)
+  # Firebase
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.3.0
   
   # Local Storage
   hive: ^2.2.3
